--- a/homework/src/style.css
+++ b/homework/src/style.css
@@ -1,5 +1,5 @@
 .alert-error {
-    color: red;
+    color: white;
     background-color:black;
     font-size: 4rem;
 }
@@ -119,6 +119,12 @@ img{
   width: 150px; 
   display: flex;
   justify-content: center;
+}
+#catImage{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 #link {
